# libsrtp-android

./: CMakeLists.txt  README.md
build.android/jni/: Android.mk  Application.mk
src/: CMakeLists.txt
src/Stream/: CMakeLists.txt  StreamReceiver.c  StreamReceiver.h  StreamSender.c  StreamSender.h  com_ouyang_camera_CameraStreamReceiver.c  com_ouyang_camera_CameraStreamReceiver.h  com_ouyang_camera_CameraStreamSender.c  com_ouyang_camera_CameraStreamSender.h  com_ouyang_srtp_SrtpStreamReceiver.c  com_ouyang_srtp_SrtpStreamReceiver.h  com_ouyang_srtp_SrtpStreamSender.c  com_ouyang_srtp_SrtpStreamSender.h  rtp.c  stream_api.h  util.c  util.h
src/Stream/test/: CMakeLists.txt  receiver.c  sender.c
src/Tiny/: CMakeLists.txt
src/Tiny/Thread/: TinyCondition.c  TinyCondition.h  TinyMutex.c  TinyMutex.h  TinySemaphore.c  TinySemaphore.h  TinyThread.c  TinyThread.h
