#-----------------------------------------------------------------------------
#
# build
#
#-----------------------------------------------------------------------------

#----------------------------------------------------------------------------
# sender
#----------------------------------------------------------------------------
SET(SRC_SENDER
    stream_sender.h
    stream_sender.c
 )

#----------------------------------------------------------------------------
# receiver
#----------------------------------------------------------------------------
SET(SRC_RECEIVER
    stream_receiver.h
    stream_receiver.c
 )

#----------------------------------------------------------------------------
# shared library
#----------------------------------------------------------------------------
ADD_LIBRARY(stream_shared SHARED ${SRC_SENDER} ${SRC_RECEIVER})
SET_TARGET_PROPERTIES(stream_shared PROPERTIES OUTPUT_NAME "stream")
SET_TARGET_PROPERTIES(stream_shared PROPERTIES LINKER_LANGUAGE C)
TARGET_LINK_LIBRARIES(stream_shared ${OS_LIB} tiny_static)

#-----------------------------------------------------------------------------
#
# test
#
#-----------------------------------------------------------------------------
ADD_SUBDIRECTORY(test)
